[package]
name = "uuidump"
version = "0.1.0"
edition = "2024"
authors = ["Paddyk45 <me@paddy.li>"]
license = "WTFPL"

[dependencies]
bpaf = { version = "0.9.20", features = ["derive"] }
eyre = "0.6.12"
lazy_static = "1.5.0"
reqwest = { version = "0.12.22", features = ["json", "rustls-tls"], default-features = false }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4"] }

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1